apply read-only style

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.html
@@ -45,6 +45,7 @@ limitations under the License.
         on-load="aceLoaded"
         revision-view="revisionView"
         ng-click="onEditorClick()"
+        is-owner="isOwner"
       ></code-editor>
     </div>
 
