--- a/zeppelin-web/src/app/notebook/paragraph/code-editor/code-editor.directive.html
+++ b/zeppelin-web/src/app/notebook/paragraph/code-editor/code-editor.directive.html
@@ -15,7 +15,7 @@ limitations under the License.
 <div class="editor"
      ui-ace="{ onLoad : onLoad, require : ['ace/ext/language_tools'] }"
      ng-model="paragraph.text"
-     ng-class="{'paragraph-disable': paragraph.status == 'RUNNING' || paragraph.status == 'PENDING' || revisionView === true,
+     ng-class="{'paragraph-disable': paragraph.status == 'RUNNING' || paragraph.status == 'PENDING' || revisionView === true || isOwner !== true,
            'paragraph-text--dirty' : dirtyText !== originalText && dirtyText !== undefined}">
 
 </div>
